<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="Excel" name="excel" native="true"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionExport"/>
   </widget>
   <widget class="QMenu" name="menuCalculator">
    <property name="title">
     <string>Calculator</string>
    </property>
    <addaction name="actionCVSS"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>Exhibition</string>
    </property>
    <addaction name="actionGraphical"/>
   </widget>
   <widget class="QMenu" name="menuUpdate_data">
    <property name="title">
     <string>Update</string>
    </property>
    <addaction name="actionCheck_for_update"/>
    <addaction name="actionUpdate_EPSS_Scores_and_Exploit_Links"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuCalculator"/>
   <addaction name="menuView"/>
   <addaction name="menuUpdate_data"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionCVSS">
   <property name="text">
    <string>CVSS</string>
   </property>
  </action>
  <action name="actionGraphical">
   <property name="text">
    <string>Graphical</string>
   </property>
  </action>
  <action name="actionExport">
   <property name="text">
    <string>Export</string>
   </property>
  </action>
  <action name="actionCheck_for_update">
   <property name="text">
    <string>Check for update</string>
   </property>
  </action>
  <action name="actionUpdate_EPSS_Scores_and_Exploit_Links">
   <property name="text">
    <string>Update EPSS Scores and Exploit Links</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Excel</class>
   <extends>QWidget</extends>
   <header>excel</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
